<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Movie Downloader</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="web_client_id" tools:ignore="TypographyDashes">496692733934-3fdvvqqtvjjpoquta99kuh2v5ik9i3vm.apps.googleusercontent.com</string>

    <string name="language_prefix">Language: %s</string>
    <string name="rating_prefix">Rating: %s</string>
    <string name="actors_prefix">Actors: %s</string>
    <string name="director_prefix">Director: %s</string>
    <string name="genre_dialog_all">All</string>
    <string name="genre_dialog_save">Save</string>
    <string name="imdb_trailer_button">Trailer</string>
    <string name="imdb_page_button">IMdb</string>
    <string name="imdb_description_headline">Description</string>
    <string name="menu_number_of_pages">Number of pages</string>
    <string name="menu_min_rating">Min Rating</string>
    <string name="menu_min_year">Min Year</string>
    <string name="menu_english_only">English only</string>
    <string name="menu_genres">Genres</string>
    <string name="button_go">Go</string>
    <string name="download_button">Download</string>
    <string name="notification_headline">New Movie Added!</string>

    <string name="lorem">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance.</string>

</resources>